branches/typchon_0.2.0/plugins/themes/climatecolab-theme/docroot/_diffs/css/style.css
/* ... */
.blueheaderbar .where a {height:27px; padding-top:10px; margin-left:41px; display:inline-block;}
.blueheaderbar .who {float:left; width:162px; height:37px;background:url(../images/icon-list-who.png) no-repeat 10px 6px; }
.blueheaderbar .who a {height:27px; padding-top:10px; margin-left:33px; display:inline-block;}

/* proposal page */
.blueheaderbar .proposalname {float:left; width:675px; height:37px; padding-left:9px;}
.blueheaderbar .proposalname a {padding-top:10px; height:27px; display:inline-block;}
.blueheaderbar .thumbs {float:left; width:67px; height:37px;}
.blueheaderbar .thumbs a {background:url(../images/icon-proposal-thumb.png) no-repeat 0 7px; width:20px; height:37px; display:inline-block;}
.blueheaderbar .propcomm {float:left; width:65px; height:37px;}
.blueheaderbar .propcomm a {background:url(../images/icon-list-comment.png) no-repeat 0 8px; width:24px; height:37px; display:inline-block;}
.blueheaderbar .modified {float:left; width:70px; height:37px;}
.blueheaderbar .modified a {padding-top:10px; height:27px; display:inline-block;}
.blueheaderbar .contributor {float:left; width:88px; height:37px;}
.blueheaderbar .contributor a {padding-top:10px; height:27px; display:inline-block;}

/* contest page */
.blueheaderbar .contestbar {padding:11px 0 0 14px;}
.blueheaderbar .contestbar span {padding-left:30px;}
.blueheaderbar .contestbar a {padding-left:12px;}

/* the shadeed div below the bluebar */
.shadebar {background-image:url(../images/tableshade.png); background-repeat: repeat-x; height:4px; position:relative; z-index:99;}

/* ------------------------------------------------------------------------------------------------- */








/*  HOMEPAGE  ------------------------------------------------------------------------------ */

.homespot {background:url(../images/bg-noise.jpg) #ecece5; padding-bottom:5px;}
.topshade {height:9px; background: url(../images/topshade.png) repeat-x; position:relative; z-index:5;}
.earth {background:url(../images/homespot-earth.jpg) no-repeat 500px top; width:100%; min-height:336px; position:relative; top:-9px;}
.homespot-left {float:left; width:530px; padding-left:10px; color:#404041; position:relative; font-size:16px;}
.social {font-size:14px; width:180px; position:absolute; left:775px; bottom:0;}

.homespot-left h1 {font-size:35px; margin:20px 0 10px 0;}
a.learn, a.get {height:33px; padding-top:11px; margin-right:11px; display:inline-block; font-size:16px; font-weight:700; text-transform:uppercase; color:#fff;}
a.learn {background:url(../images/homespot-learn.png) no-repeat; width:127px; padding-left:48px; text-shadow:1px 1px 0 #114c65;}
a.get {background:url(../images/homespot-get.png) no-repeat; width:132px; padding-left:43px; text-shadow: 1px 1px 0 #205b0b;}
a.learn:hover {background:url(../images/homespot-learn-hover.png) no-repeat;}
a.get:hover {background:url(../images/homespot-get-hover.png) no-repeat;}

.newsbox {background:url(../images/pattern-6x6.png) #f7f7f5; width:418px; font-size:15px; padding:10px 26px 10px 18px; margin:38px 0 18px; position:relative; border:1px solid #a3a39e; -webkit-border-radius:6px; -moz-border-radius:6px; border-radius:6px;}
.newsbox h3 {float:left; font-size:15px; color:#000; width:55px;}
.newsbox-arrow {position:absolute; top:8px; left:-17px; width:17px; height:17px; background:url(../images/newsbox-arrow.png) no-repeat;}
.newsbox:after, .homespot:after {content:"."; display:block; height:0; clear:both; visibility:hidden;}
.newsbox, .homespot {display:inline-block;}
* html .newsbox, * html .homespot {height:1%;}
.newsbox, .homespot {display:block;}

.newslinks {float:left; width:363px;}
.newslinks a.readmore {color:#000;}
.newslinks a.readmore:hover {border-bottom:1px solid #000;}

.facebook {background:url(../images/icon-facebook.png) no-repeat; float:left; width:81px; height:17px; padding:1px 0 0 25px;}
.twitter {background:url(../images/icon-twitter.png) no-repeat; float:left; height:17px; padding:1px 0 0 25px;}


/* columns ------------- */
.home-left {float:left; width:520px;}
.home-right {float:left; width:464px;}

.home #content h2 {font-size:20px; color:#404040; margin-bottom:18px;}
.home #content h2.flt {}
.home #content h2 span {font-size:15px; padding-left:5px;}
.rss {float:right; margin-right:30px; width:20px;}


/* homepage activity boxes ------------- */
.activitybox {width:420px; border-bottom:1px solid #c5c5c5; padding:14px 0 18px 17px; font-size:14px; color:#545454;}
.activitybox:after {content:"."; display:block; height:0; clear:both; visibility:hidden;}
.activitybox {display:inline-block;}
* html .activitybox {height:1%;}
.activitybox {display:block;}

.activitybox.blu {background:#f3f8fa;}
.activitybox.bottom {border-bottom:none;}
.activitybox .status {float:left; width:50px; height:50px;}
.activitybox .text {float:left; width:353px; line-height:20px;}
.activitybox h3 {font-size:14px; color:#545454;}

.activitybox .comment {background:url(../images/icon-activity-comment.png) no-repeat left 16px;}
.activitybox .edit {background:url(../images/icon-activity-edit.png) no-repeat left 16px;}
.activitybox .new {background:url(../images/icon-activity-new_proposal.png) no-repeat left 12px;}
.activitybox .up {background:url(../images/icon-activity-thumbs_up.png) no-repeat left 11px;}

/* ------------------------------------------------------------------------------------------------- */







/* ABOUT ------------------------------------------------------------------------------------- */

/* columns  ------------- */
.about-left {float:left; width:210px; margin-right:38px;}
.about-right {float:left; width:736px; font-size:16px; line-height:21px; color:#000; position:relative;}

/* about menu */
#content .about-left ul {width:210px; margin:0;}
#content .about-left li { list-style:none; background:none; padding:0;}
.about-left li a {width:206px; height:30px; padding:11px 0 0 4px; font-size:18px; font-weight:700; color:#0090ff; border-bottom:1px solid #ccc; display:inline-block;}
/* ... */

